Use "lastest" as block sent to sentinel engine
